# langgraph-mcp-bootcamp

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  structure.md
.claude/: settings.local.json
.claude/rules/: ImplementationBoundary_zh.md
config/: agents_config.yaml  mcp_config.json
data/crawled/: .gitkeep
src/: __init__.py  test_custom_mcp.py  test_firecrawl.py
src/agents/: filesystem_agent_demo.py
src/agents/browser_agent/: __init__.py  graph.py
src/agents/data_agent/: __init__.py
src/agents/travel_agent/: __init__.py
src/core/: __init__.py  config.py  graph_builder.py  logger.py  mcp_adapters.py  mcp_client_manager.py  settings.py  state.py
src/mcp_servers/: __init__.py  server_12306.py  server_amap.py  server_calculator.py  server_nl2sql.py  server_python.py
