[project]
name = "langgraph-mcp-bootcamp"
version = "0.1.0"
description = "LangGraph MCP Bootcamp - 智能体框架项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.2.5",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "sse-starlette>=3.1.2",
    "aiosqlite>=0.19.0,<0.22.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-experimental>=0.4.1",
    "pyyaml>=6.0.0",
    "langchain-tavily>=0.2.17",
    "mcp[all]>=1.26.0",
    "langchain-mcp-adapters>=0.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.1.0", "mypy>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
